--- a/by-the-pods/index.html
+++ b/by-the-pods/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="tenacity.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>By The Pods</title>
+    <meta name="title" content="By The Pods Podcast Website">
+    <meta name="description" content="A podcast app that allows you to listen to your favorite podcasts on Netlify, built with React.">
+
   </head>
   <body>
     <div id="root"></div>
